    XML, and the figures from fig files to SVG files.
  * The XML parser no longer ignores <?...?> elements.
    Such elements are handled as if they were after the XML content for
    compatibility reasons, though they must appear before it.
  * The XML parser handles CDATA elements.
  * Text handling within XML is improved.

xine-lib (1.1.9) (unreleased)
  * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
  * Fix switching DVB subtitles channels.
  * DVB sub: switch to dyn mem alloc and allow multiple CLUTs per page.
  * Check if DVB sub PTS is reliable and show sub immediately if it's not.

xine-lib (1.1.8)
  * Send a channel-changed event to the frontend when receiving the SYNC
    string from last.fm streaming server.
  * Disable mediaLib support by default (the licenses probably disallow the
    distribution of xine binaries built against mediaLib, and on non-VIS
    capable boxes it's probably worse than our own code).
  * Rename endianness-reading macros so that they don't collide with Solaris
    system macros. BE_/LE_ are now _X_BE_ and _X_LE_.
  * Add an extra function to allow front ends to rename their old,
    badly-named configuration items.
  * Various build fixes and cleanups for Solaris, plugin dependencies etc.
  * Fix some memory leaks in the Vorbis decoder and video overlays.
  * Fix a problem with the goom plugin which could cause it to stop working.
  * Clean up "%" unescaping in MRLs; correctly handle "%" in DVD and VCD MRLs.
  * Fix a crash with "dvb:/".
  * DVB subtitle fixes: deadlock prevention, thread leakage, spec compliance.
  * Allow the DVB input plugin to timeout if it is receiving no signal.
  * Fix an audio resampling problem which was causing regular clicking.
  * Fix build with recent glibc and a debugging #define. [Bug 1773769]
  * Fix handling of multiple MPEG TS audio streams & subtitle languages.
  * Add colouring for bold & italic in text subtitles.